# MatchScreener

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
api/: analytics.py  fetch_football_data.py  league_map.py  smarkets_api.py  team_map.py
data/: matches_v1.parquet  matches_v2.parquet  matches_v3.parquet
src/matchscreener/: __init__.py  analytics.py  facts.py  fetch_football_data.py  league_map.py  models.py  smarkets_api.py  team_map.py
web/: app.js  index.html  styles.css
