[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matchscreener"
version = "0.1.0"
description = "Business layer for football fixture and odds screening with historical matching"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.6.1",
  "rapidfuzz>=3.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"